[gd_scene load_steps=10 format=1]

[ext_resource path="res://logic/messages.gd" type="Script" id=1]
[ext_resource path="res://resource/graphics/message_bg.png" type="Texture" id=2]
[ext_resource path="res://resource/graphics/failed.png" type="Texture" id=3]
[ext_resource path="res://resource/graphics/deathmouse.png" type="Texture" id=4]
[ext_resource path="res://resource/graphics/menu_menu_off.png" type="Texture" id=5]
[ext_resource path="res://resource/graphics/menu_next_off.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource/name = "show"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("message:transform/pos")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 326.616, -39.3487 ), Vector2( 326.616, 137.651 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("logo:transform/pos")
tracks/1/interp = 1
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 320.915, 571.641 ), Vector2( 320.915, 260.641 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("menu:transform/pos")
tracks/2/interp = 1
tracks/2/keys = { "cont":true, "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( -68.928, 418.836 ), Vector2( 129.072, 418.836 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("next:transform/pos")
tracks/3/interp = 1
tracks/3/keys = { "cont":true, "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 706.37, 411.08 ), Vector2( 506.37, 411.08 ) ] }

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 67.3205, 20.1684 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 62.1205, 20.4196 )

[node name="messages" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 320, 240 )
texture = ExtResource( 2 )

[node name="message" type="Sprite" parent="."]

transform/pos = Vector2( 326.616, -39.3487 )
texture = ExtResource( 3 )

[node name="logo" type="Sprite" parent="."]

transform/pos = Vector2( 320.915, 571.641 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="menu" type="Area2D" parent="."]

transform/pos = Vector2( -68.928, 418.836 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true, "_editor_collapsed":true }

[node name="Sprite" type="Sprite" parent="menu"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="menu"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="next" type="Area2D" parent="."]

transform/pos = Vector2( 706.37, 411.08 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true, "_editor_collapsed":true }

[node name="Sprite" type="Sprite" parent="next"]

texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="next"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="mouse_enter" from="menu" to="." method="_on_menu_mouse_enter"]

[connection signal="input_event" from="menu" to="." method="_on_menu_input_event"]

[connection signal="mouse_exit" from="menu" to="." method="_on_menu_mouse_exit"]

[connection signal="mouse_enter" from="next" to="." method="_on_next_mouse_enter"]

[connection signal="input_event" from="next" to="." method="_on_next_input_event"]

[connection signal="mouse_exit" from="next" to="." method="_on_next_mouse_exit"]


